@@ -1,3 +1,8 @@
+2008-10-10  Callum McKenzie  <callum@spooky-possum.org>
+
+	* POTFILES.in: Patch from Changwoo Ryu to put explicit type
+	information with the GtkBuilder files. Helps with bug 555656.
+
 ==================== 2.24.0.1 ====================
 
 2008-09-23  Laurent Dhima  <laurenti@alblinux.net>
